# StringWithBuffer

./: CMakeLists.txt  README.md
Source/: BufferManager.hpp  String.hpp  Testable.hpp  Timer.hpp  Tracker.hpp  autotest.hpp  main.cpp
